<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_basic_fee"
            android:title="@string/revenue_basic_fee" />
        <item
            android:id="@+id/nav_car_setting"
            android:title="@string/revenue_car_setting" />
        <item
            android:id="@+id/nav_print_setting"
            android:title="@string/revenue_print_setting" />
        <item
            android:id="@+id/nav_revenue_manage"
            android:title="@string/revenue_manage" />
        <item
            android:id="@+id/nav_revenue_coupon"
            android:title="@string/revenue_coupon" />
    </group>
</menu>