<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.parking5.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_system"
        android:name="com.example.parking5.ui.system.BasicSettingFragment"
        android:label="@string/menu_system"
        tools:layout="@layout/fragment_basic_setting" />

    <fragment
        android:id="@+id/nav_revenue"
        android:name="com.example.parking5.ui.revenue.BasicFeeFragment"
        android:label="@string/menu_revenue"
        tools:layout="@layout/fragment_basic_fee" />

    <fragment
        android:id="@+id/nav_data_search"
        android:name="com.example.parking5.ui.data_search.HistoryFragment"
        android:label="@string/menu_data_search"
        tools:layout="@layout/fragment_history" />
</navigation>